check pre-commit hooks'

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,38 +1,31 @@
+# .pre-commit-config.yaml
 repos:
-  # Форматирование кода
-  - repo: https://github.com/psf/black
-    rev: 23.12.1
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
     hooks:
-      - id: black
-        language_version: python3
-        args: [--line-length=100]
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
 
-  # Сортировка импортов
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.6
     hooks:
-      - id: isort
-        args: [--profile=black, --line-length=100]
-
-  # Линтер и форматирование (Ruff)
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.8
-    hooks:
-      - id: ruff
+    -   id: ruff
         args: [--fix]
-      - id: ruff-format
+    -   id: ruff-format
 
-  # Проверка типов (MyPy)
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.7.1
+-   repo: https://github.com/psf/black
+    rev: 23.3.0
     hooks:
-      - id: mypy
-        additional_dependencies: [types-all]
-        args: [--ignore-missing-imports]
+    -   id: black
 
-  # Проверка безопасности (Bandit)
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.5
+-   repo: https://github.com/pycqa/isort
+    rev: 5.12.0
     hooks:
-      - id: bandit
-        args: [-ll, -i]
+    -   id: isort
+
+-   repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
+    hooks:
+    -   id: flake8
