--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # .pre-commit-config.yaml
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v6.0.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -9,31 +9,37 @@ repos:
     -   id: check-added-large-files
 
 -   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.6
+    rev: v0.14.5
     hooks:
     -   id: ruff
         args: [--fix]
     -   id: ruff-format
 
 -   repo: https://github.com/psf/black
-    rev: 23.3.0
+    rev: 25.11.0
     hooks:
     -   id: black
 
 -   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 7.0.0
     hooks:
     -   id: isort
 
 -   repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+    rev: 7.3.0
     hooks:
     -   id: flake8
 
   # Проверка типов (MyPy)
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.7.1
+  rev: v1.18.2
   hooks:
     - id: mypy
       args: [--ignore-missing-imports]
       additional_dependencies: ['types-requests']
+
+- repo: https://github.com/PyCQA/bandit
+  rev: 1.9.0
+  hooks:
+    - id: bandit
+      additional_dependencies: [ "pbr" ]
