--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,12 +8,12 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 
--   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.5
-    hooks:
-    -   id: ruff
-        args: [--fix]
-    -   id: ruff-format
+# -   repo: https://github.com/astral-sh/ruff-pre-commit
+#     rev: v0.14.8
+#     hooks:
+#     -   id: ruff
+#         args: [--fix]
+#     -   id: ruff-format
 
 -   repo: https://github.com/psf/black
     rev: 25.11.0
@@ -32,14 +32,14 @@ repos:
 
   # Проверка типов (MyPy)
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.18.2
+  rev: v1.19.0
   hooks:
     - id: mypy
       args: [--ignore-missing-imports]
       additional_dependencies: ['types-requests']
 
 - repo: https://github.com/PyCQA/bandit
-  rev: 1.9.0
+  rev: 1.9.2
   hooks:
     - id: bandit
       additional_dependencies: [ "pbr" ]
