--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,13 +8,6 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 
-# -   repo: https://github.com/astral-sh/ruff-pre-commit
-#     rev: v0.14.8
-#     hooks:
-#     -   id: ruff
-#         args: [--fix]
-#     -   id: ruff-format
-
 -   repo: https://github.com/psf/black
     rev: 25.11.0
     hooks:
@@ -30,13 +23,12 @@ repos:
     hooks:
     -   id: flake8
 
-  # Проверка типов (MyPy)
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.19.0
   hooks:
     - id: mypy
       args: [--ignore-missing-imports]
-      additional_dependencies: ['types-requests']
+      additional_dependencies: ['types-requests', 'types-PyYAML']
 
 - repo: https://github.com/PyCQA/bandit
   rev: 1.9.2
