--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,3 +62,5 @@ dvc = "^3.64.2"
 wandb = "^0.23.1"
 types-pyyaml = "^6.0.12.20250915"
 pydantic = "^2.12.5"
+clearml = "^2.0.2"
+clearml-agent = "^2.0.6"
