--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,7 @@ types-pyyaml = "^6.0.12.20250915"
 pydantic = "^2.12.5"
 clearml = "^2.0.2"
 clearml-agent = "^2.0.6"
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.7.1"
+mkdocstrings = "^1.0.0"
+mkdocstrings-python = "^2.0.1"
